# mcapepe-presale-program

./: .env  .gitignore  Anchor.toml  package.json  rust-toolchain.toml  tsconfig.json
programs/mcapepe-presale/: Cargo.toml
programs/mcapepe-presale/src/: errors.rs  lib.rs  state.rs
programs/mcapepe-presale/src/instructions/: add_allowed_mint.rs  buy_native_sol.rs  buy_spl.rs  set_treasury.rs  withdraw_native_sol.rs  withdraw_spl.rs
programs/mcapepe_presale/: Cargo.toml
programs/mcapepe_presale/src/: errors.rs  events.rs  lib.rs  state.rs
programs/mcapepe_presale/src/instructions/: mod.rs  transfer_admin.rs
programs/mcpepe_presale/: Cargo.toml
programs/mcpepe_presale/src/: consts.rs  lib.rs
programs/mcpepe_presale/src/instructions/: add_allowed_mint.rs  buy_native_sol.rs  buy_spl.rs  initialize.rs  set_treasury.rs  withdraw_native_sol.rs  withdraw_spl.rs
scripts/: deploy-devnet.sh  deploy-devnet.ts  deploy-mainnet.ts  env-utils.ts  initialize-devnet.ts  phantom-to-id-json.ts
tests/: mcapepe_presale.ts  mcpepe_presale.ts
